crates/sifr/src/shell/snapshots/sifr__shell__presentation__tests__every_repo_theme_derives_its_own_palette@terracotta-light.snap
---
source: crates/sifr/src/shell/presentation.rs
expression: colors
---
Colors {
    background: Rgb(
        [
            250,
            249,
            245,
        ],
    ),
    window_background: Rgb(
        [
            240,
            239,
            235,
        ],
    ),
    foreground: Rgb(
        [
            20,
            20,
            19,
        ],
    ),
    accent: Rgb(
        [
            217,
            119,
            87,
        ],
    ),
    favorite: Rgb(
        [
            184,
            134,
            43,
        ],
    ),
    selection_foreground: Rgb(
        [
            20,
            20,
            19,
        ],
    ),
    selection_background: Rgb(
        [
            182,
            181,
            178,
        ],
    ),
    highlight: Rgb(
        [
            130,
            71,
            52,
        ],
    ),
    muted_foreground: Rgb(
        [
            94,
            93,
            89,
        ],
    ),
    bar_groove: Rgb(
        [
            178,
            177,
            174,
        ],
    ),
    spectrum: [
        Rgb(
            [
                63,
                122,
                63,
            ],
        ),
        Rgb(
            [
                184,
                134,
                43,
            ],
        ),
        Rgb(
            [
                176,
                67,
                44,
            ],
        ),
    ],
}
